# saiman-signal

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  saiman-signal.service
.github/workflows/: deploy.yml
src/saiman_signal/: __main__.py  agent.py  bot.py  config.py  conversation.py  signal_api.py  system_prompt.txt  telegram.py  transcription.py
src/saiman_signal/tools/: __init__.py  beli_lookup.py  get_page_contents.py  reddit_read.py  reddit_search.py  set_location.py  web_search.py
