[project]
name = "saiman-signal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0",
    "httpx>=0.28",
    "anthropic[bedrock]>=0.75",
    "aiosqlite>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
