[project]
name = "saiman-signal"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "websockets>=15.0",
    "httpx>=0.28",
    "anthropic[bedrock]>=0.75",
    "aiosqlite>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0",
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saiman_signal"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty]
python-version = "3.13"
